fixed layout bugs on FAQ and Contact pages

--- a/src/components/pages/Contact/Contact.module.css
+++ b/src/components/pages/Contact/Contact.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
+    width: 100vw;
   }
 
   .FAQ {
@@ -19,7 +20,7 @@
     align-items: center;
     margin-top: 7.5vh;
     font-weight: bold;
-    font-size: 1vw;
+    font-size: clamp(16px, 2vw, 32px);
   }
 
   .link {
